--- a/AudioCast/AudioCast.entitlements
+++ b/AudioCast/AudioCast.entitlements
@@ -6,7 +6,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.dengli.AudioCast</string>
+		<string>group.cn.renyuzhuo.audio</string>
 	</array>
 </dict>
 </plist>
