--- a/AudioCast/Info.plist
+++ b/AudioCast/Info.plist
@@ -20,8 +20,19 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>INIntentsSupported</key>
+	<array>
+		<string>INPlayMediaIntent</string>
+	</array>
+	<key>INSupportedMediaCategories</key>
+	<array>
+		<string>INMediaCategoryVideo</string>
+		<string>INMediaCategoryGeneral</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSUserActivityTypes</key>
+	<string>INPlayMediaIntent</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
