--- a/AudioCastIntents/AudioCastIntents.entitlements
+++ b/AudioCastIntents/AudioCastIntents.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.dengli.AudioCast</string>
+		<string>group.cn.renyuzhuo.audio</string>
 	</array>
 </dict>
 </plist>
