--- a/AudioCastIntents/Info.plist
+++ b/AudioCastIntents/Info.plist
@@ -20,11 +20,26 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>INIntentsSupported</key>
+	<array>
+		<string>INPlayMediaIntent</string>
+	</array>
+	<key>INSupportedMediaCategories</key>
+	<array>
+		<string>INMediaCategoryAudiobooks</string>
+		<string>INMediaCategoryMusic</string>
+		<string>INMediaCategoryVideo</string>
+		<string>INMediaCategoryGeneral</string>
+		<string>INMediaCategoryPodcasts</string>
+		<string>INMediaCategoryRadio</string>
+	</array>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>IntentsRestrictedWhileLocked</key>
+			<array/>
+			<key>IntentsRestrictedWhileProtectedDataUnavailable</key>
 			<array/>
 			<key>IntentsSupported</key>
 			<array>
